fixed wrap issues with the work cards, and added new website

--- a/src/stylesheets/homepage.css
+++ b/src/stylesheets/homepage.css
@@ -95,6 +95,7 @@ p, h2, h5 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 
